--- a/BS_Model_draft.ipynb
+++ b/BS_Model_draft.ipynb
@@ -15,7 +15,9 @@
     "id": "j4o1ADd8dklG"
    },
    "source": [
-    "**Abstract**: This project is conducted for Data Mining (CSCI145) for Fall 2020 by Juan Diego Herrera and Seungho (Samuel) Lee. Expanding upon an effort to recreate the Black-Scholes option pricing model with Multilayer Perceptrons [Robert Culkin, Sanjiv R. Das, Machine Learning in Finance: The Case of Deep Learning for Option Pricing (2017)]."
+    "**Abstract**: This project is conducted by [Juan Diego Herrera](https://github.com/jknaudt21) and [Seungho (Samuel) Lee](https://github.com/samuellee19). Here, we expand upon Robert Culkin's and Sanjiv R. Das' effort to recreate the Black-Scholes option pricing model using neural networks.\n",
+    "\n",
+    "[Robert Culkin, Sanjiv R. Das, Machine Learning in Finance: The Case of Deep Learning for Option Pricing (2017)](https://srdas.github.io/Papers/BlackScholesNN.pdf)."
    ]
   },
   {
@@ -26,7 +28,7 @@
    "source": [
     "## Project Overview\n",
     "### Background\n",
-    "**The Black Scholes model** is used to price put and call options by estimating the variation over time of the financial instruments. While a Geometric Brownian Motion (GBM) has been used as an assumption of the model, the assumption is often violated in practice, leading to a numerous variations of the Black-Scholes model. \n",
+    "**The Black Scholes model** is used to price put and call options by estimating the variation over time said financial instruments. While a Geometric Brownian Motion (GBM) has been used as an assumption of the model, the assumption is often violated in practice, leading to a numerous variations of the Black-Scholes model. \n",
     "\n",
     "The **Black-Scholes formula for European call and put options** are:\n",
     "\n",
@@ -37,19 +39,22 @@
     "- $C(S_0,t)$: Price of the Call Option\n",
     "- $K$: Exercise Price\n",
     "- $(T-t)$: Time to Maturity, where T is Exercise Date\n",
-    "\n",
-    "Hence, $N(d_1)$ and $N(d_2)$ are **cumulative distribution functions for a standard normal distribution**:\n",
-    "$$d_1=\\frac{\\ln\\frac{S_0}{K}+(r+\\frac{\\sigma^2}{2})(T-t)}{\\sigma\\sqrt{T-t}}$$\n",
-    "$$d_2=d_1-\\sigma\\sqrt{T-t}=\\frac{\\ln\\frac{S_0}{K}+(r-\\frac{\\sigma^2}{2})(T-t)}{\\sigma\\sqrt{T-t}}$$\n",
-    "where\n",
     "- $\\sigma$: Underlying Volatility (a standard deviation of log returns)\n",
     "- $r$: Risk-free Interest Rate (i.e., T-bill Rate)\n",
     "\n",
+    "The $d_i$ variables are defined as:\n",
+    "$$d_1=\\frac{\\ln\\frac{S_0}{K}+(r+\\frac{\\sigma^2}{2})(T-t)}{\\sigma\\sqrt{T-t}}$$\n",
+    "$$d_2=d_1-\\sigma\\sqrt{T-t}=\\frac{\\ln\\frac{S_0}{K}+(r-\\frac{\\sigma^2}{2})(T-t)}{\\sigma\\sqrt{T-t}}$$\n",
+    "\n",
+    "Finally, $N(x)$ is cumulative distribution function for the standard normal distribution.\n",
+    "\n",
+    "\n",
     "\n",
     "### Project Objectives\n",
-    "What we will be doing:\n",
-    "1) Recreate Culkin and Das' work,\\\n",
-    "2) See whether fitted simulated model performs well on actual data, 3) Can it perform better based on different dataset"
+    "In this project, we aim to do the following:\n",
+    "1) Recreate Culkin and Das' work\\\n",
+    "2) See whether fitted simulated model performs well on actual data \\\n",
+    "3) Observe if the model can perform better based on different datasets"
    ]
   },
   {
@@ -61,11 +66,13 @@
     "## Methodologies\n",
     "### Data\n",
     "\n",
-    "For data that we utilized in recreating the above work, we utilized same simulation data that Culkin and Das used to train and validate the fitted MLP model. Furthermore, we queried two different datasets from Bloomberg to compile for fitting the model: **Options Data** and **Underlying Stock Information**. Lastly, we collected another set data from Yahoo Finance and AlphaQuery for S&P500 companies to prepare ample data set for the analysis.\n",
+    "To recreate Culkin and Das' work we utilized the same simulated data used in the paper to train and validate the neural network. \n",
+    "\n",
+    "Aditionally, we queried UKX options data and the options' underlying stock infromation from Bloomberg (see Bloomberg Query File). We also created another dataset by [scraping](https://github.com/jknaudt21/Option-Scraper-BlackScholes) information for S&P500 companies from Yahoo Finance and AlphaQuery.\n",
     "\n",
     "#### 1. Culkin and Das (2017)\n",
     "\n",
-    "To train the MLP algorithm to learn the call option pricing equation, Culkin and Das (2017) simulated a range of call option prices with ranges of different parameters:\n",
+    "To train a neural network to learn the call option pricing equation, Culkin and Das (2017) simulated a range of call option prices with ranges of different parameters:\n",
     "\n",
     "| Parameter              |   Range           |\n",
     "|:-----------------------|:------------------|\n",
@@ -77,7 +84,7 @@
     "| Volatility $(\\sigma)$  | 5\\% — 90\\%        |\n",
     "| Call Price $(C)$       |  \\\\$0 — \\\\$328    |\n",
     "\n",
-    "Hence, there are 300,000 observations.\n",
+    "In total, the dataset contains 300,000 observations.\n",
     "\n",
     "#### 2. UKX Bloomberg Data\n",
     "\n",
@@ -85,7 +92,7 @@
     "\n",
     "#### 3. S&P 500 Scraped Data\n",
     "\n",
-    "To address a limited number of observations on the above data, we collected additional data using `pandas`, `bs4`, and `requests` libraries. As there are 5130 observations, this data is evaluated both independently and in addendum to `UKX` data.\n",
+    "To address a limited number of observations on the above data, we collected additional data through web scraping. Although web data may be imperfect, it can still hold useful information. For this dataset there are 200,000+ observations and we evaluate it separately from the addendum of UKX data.\n",
     "\n"
    ]
   },
@@ -392,7 +399,6 @@
     }
    ],
    "source": [
-    "# df = pd.read_csv(path+'data/BS_training.csv', low_memory=False)\n",
     "df = pd.read_csv('data/BS_training.csv')\n",
     "df.head()"
    ]
@@ -403,7 +409,7 @@
     "id": "02dOCrJx5ba8"
    },
    "source": [
-    "As `pandas` library imported the data with unnecessary index column, we dropped the column from the data frame."
+    "The orginal dataset contains an unecessary index column, so we drop it from the frame"
    ]
   },
   {
@@ -588,11 +594,10 @@
     "- 4 hidden fully connected layers, each with 100 neurons\n",
     "- Batch size of 64\n",
     "- 10 training epochs\n",
-    "- 20% of the training data was set apart for validation\n",
+    "- 80-20 train-validation split\n",
+    "- Mean Squared error as loss function\n",
     "\n",
-    "The main difference between our model and the paper's model is that our network uses ReLU as the activation function for every layer, instead of using LeakyReLU, ELU, ReLU, and ELU for the four layers. We also did not employ dropout regularization. Lastly, we opted to use \"Adam\" as our optimizer rather than stochastic gradient descent.\n",
-    "\n",
-    "Lastly, it is worth noting that our loss function is the Mean Squared Error, as this is a regression problem and already comes pre-built in sklearn."
+    "The main difference between our model and the paper's model is that our network uses ReLU as the activation function for every layer, instead of using LeakyReLU, ELU, ReLU, and ELU for the four layers respectively. We also did not employ dropout regularization. Lastly, we opted to use \"Adam\" as our optimizer rather than stochastic gradient descent."
    ]
   },
   {
@@ -710,7 +715,6 @@
    "outputs": [],
    "source": [
     "# Save First Fitted Model\n",
-    "## filename = path + 'models/BS_model.sav'\n",
     "filename = 'models/BS_model.sav'\n",
     "pickle.dump(mlp, open(filename, 'wb'))"
    ]
@@ -794,7 +798,7 @@
    "source": [
     "We can see that the model produced very promising results from the simulated data. While the results show that the algorithm is able to learn option pricing mechanism, we cannot draw any significant conclusion that it can produce meaningful results in real life situation.\n",
     "\n",
-    "Hence, we were able to visualize as the below:"
+    "We can visualize the succes of the model in the graph below:"
    ]
   },
   {
@@ -928,11 +932,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -1061,7 +1060,7 @@
     "## Validating with real data\n",
     "So far, we have observed the behavior of the model using the synthetic data. Though the use of synthetic data has allowed us to learn the Black-Scholes model quite accurately, we have yet to see how the model performs using real data. Plus, we could also gauge whether models trained in real data are able to better price options in the market.\n",
     "\n",
-    "Nonetheless, it is worth noting that a common option trading strategy is to determine whether an option is undervalued or fairly valued with respect to price and the price outputed by Black-Scholes. With this in mind, if our model misprices an option with a higher price, it could be an indicator that said option is undervalued\n",
+    "Nonetheless, it is worth noting that a common option trading strategy is to determine whether an option is undervalued or fairly valued with respect to the market's price and the price outputed by Black-Scholes. With this in mind, if our model misprices an option with a higher price, it could be an indicator that said option is undervalued\n",
     "\n",
     "**Important**: by the time the data  for this article was collected, the current risk-free rate was 0.88%\n",
     "\n"
@@ -1074,7 +1073,7 @@
    },
    "source": [
     "### UKX Bloomberg Data\n",
-    "To start the validation, we pulled options data using a Bloomberg terminal. To limit the size of query, we extracted the data for around ~1600 calls for stocks in the UKX 100. \n",
+    "To start the validation, we pulled options data using a Bloomberg terminal. To limit the size of query, we extracted the data for around ~1600 calls on stocks in the UKX100. \n",
     "\n"
    ]
   },
@@ -1434,7 +1433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It makes sense that a model trained from the simulated data would perform relatively bad. However, a real question is whether MLP algorithm can perform well, given a real data that is not normally distributed. "
+    "It makes sense that a model trained from the simulated data would perform relatively bad. However, a real question is whether neural network can perform well given real data that is not normally distributed. "
    ]
   },
   {
@@ -1577,7 +1576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the above, we can see that the model was able to perform very well, given that there were only 1,685 observations. However, one thing to note is that the result exhibits a very **high kurtosis**: while the model is consistent in most cases, it could lead to a severe gain/loss (long tails) from time to time. In real-life application, such model will not be preferred by the practitioners as an **expected values of risks associated with investment strategies utilizing the above will be hard to capture via traditional financial models**, such as Value-at-Risk (VaR)."
+    "From the above, we can see that the model was able to perform very well, given that there were only 1,685 observations. However, one thing to note is that the result exhibits a very **high kurtosis**: while the model is consistent in most cases, it could lead to a severe gain/loss (long tails) from time to time. In real-life application, such model will not be preferred by the practitioners as the **expected values of risk associated with investment strategies utilizing the model above will be hard to capture via traditional financial models**, such as Value-at-Risk (VaR)."
    ]
   },
   {
@@ -1977,9 +1976,9 @@
    "metadata": {},
    "source": [
     "## Training with real data\n",
-    "In this section, we checked whether a model trained on real data performs significantly better than a model trained on the synthetic data. Prior to the actual analysis, we concatenated existing `UKX` and `SNP` data to prepare a larger data.\n",
+    "In this section, we checked whether a model trained on real data performs significantly better than a model trained on the synthetic data. For this analysis we concatenated the `UKX` and `SNP` data into a larger dataset.\n",
     "\n",
-    "To compensate for a lack of data, we trained the model longer by setting a larger `epoch` value.\n"
+    "To compensate for a lack of data, we trained the model longer by increasing the number of epochs."
    ]
   },
   {
@@ -2188,7 +2187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interestingly, we see a quite similar behavior to the model trained on synthetic (yet less noisy) data. Since we are only looking at relatively small portion of available SNP data, something worth exploring would be to scrape all of the SNP data and testing the model again. \n",
+    "Interestingly, we see a quite similar behavior to the model trained on synthetic (yet less noisy) data. Since we are only looking at portion of the SNP and UKX data, something worth exploring would be to scrape all of the SNP data and test the model again. \n",
     "\n",
     "Regardless, we've shown that **real options data follows somewhat closely the guidelines established by Black-Scholes** and that **a model trained on accurate data for said model will perform better than one trained on market data**."
    ]
@@ -2200,11 +2199,11 @@
    },
    "source": [
     "## Conclusion\n",
-    "In this research project, we validated Culkin and Das conclusion: a machine learning field is facing a rebirth that has found applications in highly dynamic fields, such as Finance. Certain pricing schemes in Finance could be non-linear (e.g., Black-Scholes) and could undergo a significant calculation to reach a conclusion. However, we also saw that MLP algorithm is still able to predict non-linear parameters fairly accurately, which can be seen from a relatively high $R^2$ values of the above models. \n",
+    "In this research project, we validated Culkin and Das conclusion: a machine learning field is facing a rebirth that has found applications in highly dynamic fields such as finance. Certain financial pricing schemes could be non-linear (e.g., Black-Scholes) and undergo a significant amount of calculation to reach a conclusion. However, neural networks can learn and predict non-linear behavior fairly accurately, which can be seen from a relatively high $R^2$ values of the above models. \n",
     "\n",
     "However, we also saw that the fitted models produced drastically different test accuracies, depending on a seed level, and that the error distributions of those models exhibited high skewedness and kurtosis. Therefore, more consistent models could be generated through optimizing hyperparameters and conducting a comprehensive data transformation process. It is also important to note that the above models failed to fit all options with different maturities and strikes. \n",
     "\n",
-    "In theory, it is well regarded that it is nearly impossible to predict stock prices in consistent manner as actual market is highly efficient (i.e., Efficient Market Hypothesis) and as high level of noise exists in real data. Therefore, creating a model that predicts stock prices in a very consistent manner would be worth pondering."
+    "In theory, it is well regarded that it is nearly impossible to predict stock prices in consistent manner as the actual market is highly efficient (i.e., Efficient Market Hypothesis). Plus, a high level of noise exists in real data. Therefore, creating a model that predicts stock prices in a very consistent manner would be extremely difficult to create, yet would yield inmense monetary benefits."
    ]
   }
  ],
@@ -2230,7 +2229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
