--- a/BS_Model_draft.ipynb
+++ b/BS_Model_draft.ipynb
@@ -92,7 +92,7 @@
     "\n",
     "#### 3. S&P 500 Scraped Data\n",
     "\n",
-    "To address a limited number of observations on the above data, we collected additional data through web scraping. Although web data may be imperfect, it can still hold useful information. For this dataset there are 200,000+ observations and we evaluate it separately from the addendum of UKX data.\n",
+    "To address a limited number of observations on the above data, we collected additional data through web scraping. Although web data may be imperfect, it can still hold useful information. For this dataset there are 57,000+ observations and we evaluate it separately from the addendum of UKX data.\n",
     "\n"
    ]
   },
@@ -824,7 +824,7 @@
    ],
    "source": [
     "preds_test = mlp.predict(X_test)\n",
-    "plt.scatter(preds_test, y_test, s= 0.1)\n",
+    "plt.scatter(y_test, preds_test, s= 0.1)\n",
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.xlabel(\"Actual Price\")\n",
     "plt.title(\"Actual vs Predicted Price\")\n",
@@ -1283,7 +1283,7 @@
     "X_ukx = ukx.drop('Call Price', axis=1)\n",
     "Y_ukx = ukx['Call Price']\n",
     "preds_ukx= mlp.predict(X_ukx)\n",
-    "plt.scatter(preds_ukx, Y_ukx)\n",
+    "plt.scatter(Y_ukx, preds_ukx, s=1)\n",
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.xlabel(\"Actual Price\")\n",
     "plt.title(\"Actual vs Predicted Price\")\n",
@@ -1433,7 +1433,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It makes sense that a model trained from the simulated data would perform relatively bad. However, a real question is whether neural network can perform well given real data that is not normally distributed. "
+    "It makes sense that a model trained from the simulated data would perform relatively bad. However, a real question is whether neural network can perform well given real data that is not normally distributed.\n",
+    "\n",
+    "To ameliorate the effect of having less data, we increased the number of epochs"
    ]
   },
   {
@@ -1473,7 +1475,7 @@
     "\n",
     "mlp_u = MLPRegressor(hidden_layer_sizes=(100,100,100,100), \n",
     "                   solver='adam', shuffle = False, batch_size=64, verbose=True,\n",
-    "                   max_iter= 10\n",
+    "                   max_iter= 20\n",
     "                    )\n",
     "\n",
     "mlp_u.fit(X_train_ukx, y_train_ukx)\n",
@@ -1588,7 +1590,7 @@
     "## S&P500 Scraped Data\n",
     "To finalize the exploration on the performance of this model, we will see how the model behaves when put it against data scraped from S&P500 options.\n",
     "\n",
-    "To gather the data and generate the dataset, we created [this scraping algorithm](https://github.com/jknaudt21/Option-Scraper-BlackScholes). We made a dataset of ~5100 entries.\n",
+    "To gather the data and generate the dataset, we created [this scraping algorithm](https://github.com/jknaudt21/Option-Scraper-BlackScholes). We made a dataset of ~57,000 entries.\n",
     "\n",
     "Taking a same approach as the above, we began with a normalization process of the data:\n",
     "\n"
@@ -1781,7 +1783,7 @@
     "X_snp = snp.drop('Call Price', axis=1)\n",
     "Y_snp = snp['Call Price']\n",
     "preds_snp= mlp.predict(X_snp)\n",
-    "plt.scatter(preds_snp, Y_snp, s=3)\n",
+    "plt.scatter(Y_snp, preds_snp, s=3)\n",
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.xlabel(\"Actual Price\")\n",
     "plt.title(\"Actual vs Predicted Price\")\n",
@@ -1794,7 +1796,7 @@
     "id": "w-0asnXLEnUq"
    },
    "source": [
-    "From the above, we can see that there seems to be more deviations than predictions made on previous data. To assess a relationship between the In-The-Money (ITM) call options and the Out-of-The-Money (OTM) call options, we plotted a new graph that is focused on a bottom-left cluster. In usual cases, OTM call options would have higher prices than the predicted points. Another aspect to note is that there are more OTM call options in the market than ITM call options:"
+    "From the above, we can see that there seems to be more deviations than predictions made on previous data. To assess a relationship between the In-The-Money (ITM) call options and the Out-of-The-Money (OTM) call options, we plotted a new graph that is focused on a bottom-left cluster. In usual cases, OTM call options would have higher prices than the predicted points."
    ]
   },
   {
@@ -1816,18 +1818,17 @@
     }
    ],
    "source": [
-    "X_snp_itm = snp[snp['Strike Price'] >= snp['Stock Price']]\n",
-    "X_snp_otm = snp[snp['Strike Price'] < snp['Stock Price']] \n",
+    "X_snp_itm = snp[snp['Strike Price'] < snp['Stock Price']]\n",
+    "X_snp_otm = snp[snp['Strike Price'] >= snp['Stock Price']] \n",
     "Y_snp_itm = X_snp_itm['Call Price']\n",
     "Y_snp_otm = X_snp_otm['Call Price']\n",
-    "preds = mlp.predict(X_snp_itm.drop('Call Price', axis=1))\n",
-    "plt.scatter(mlp.predict(X_snp_otm.drop('Call Price', axis=1)), Y_snp_otm, c='r', s=3)\n",
-    "plt.scatter( mlp.predict(X_snp_itm.drop('Call Price', axis=1)), Y_snp_itm, s=3)\n",
+    "plt.scatter(Y_snp_otm, mlp.predict(X_snp_otm.drop('Call Price', axis=1)), c='r', s=2)\n",
+    "plt.scatter(Y_snp_itm, mlp.predict(X_snp_itm.drop('Call Price', axis=1)), s=2)\n",
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.xlabel(\"Actual Price\")\n",
     "plt.title(\"Actual vs Predicted Price\")\n",
-    "plt.xlim(0, 2)\n",
-    "plt.ylim(0, 2)\n",
+    "plt.xlim(0, 5)\n",
+    "plt.ylim(0, 5)\n",
     "plt.legend(['OTM', 'ITM'])\n",
     "plt.show()"
    ]
@@ -1994,7 +1995,7 @@
     "\n",
     "mlp2 = MLPRegressor(hidden_layer_sizes=(100,100,100,100), \n",
     "                   solver='adam', shuffle = False, batch_size=64, verbose=False,\n",
-    "                   max_iter= 50\n",
+    "                   max_iter= 20\n",
     "                    ) \n",
     "\n",
     "mlp2.fit(X_train2, y_train2)\n",
@@ -2169,13 +2170,12 @@
     }
    ],
    "source": [
-    "X_snp_itm = snp[snp['Strike Price'] >= snp['Stock Price']]\n",
-    "X_snp_otm = snp[snp['Strike Price'] < snp['Stock Price']] \n",
-    "Y_snp_itm = X_snp_itm['Call Price']\n",
-    "Y_snp_otm = X_snp_otm['Call Price']\n",
-    "preds = mlp2.predict(X_snp_itm.drop('Call Price', axis=1))\n",
-    "plt.scatter(mlp2.predict(X_snp_otm.drop('Call Price', axis=1)), Y_snp_otm, c='r', s=3)\n",
-    "plt.scatter( mlp2.predict(X_snp_itm.drop('Call Price', axis=1)), Y_snp_itm, s=3)\n",
+    "X_df2_itm = df2[df2['Strike Price'] < df2['Stock Price']]\n",
+    "X_df2_otm = df2[df2['Strike Price'] >= df2['Stock Price']] \n",
+    "Y_df2_itm = X_df2_itm['Call Price']\n",
+    "Y_df2_otm = X_df2_otm['Call Price']\n",
+    "plt.scatter(Y_df2_otm, mlp2.predict(X_df2_otm.drop('Call Price', axis=1)), c='r', s=3)\n",
+    "plt.scatter(Y_df2_itm, mlp2.predict(X_df2_itm.drop('Call Price', axis=1)), s=3)\n",
     "plt.ylabel(\"Predicted Price\")\n",
     "plt.xlabel(\"Actual Price\")\n",
     "plt.title(\"Actual vs Predicted Price\")\n",
@@ -2189,7 +2189,7 @@
    "source": [
     "Interestingly, we see a quite similar behavior to the model trained on synthetic (yet less noisy) data. Since we are only looking at portion of the SNP and UKX data, something worth exploring would be to scrape all of the SNP data and test the model again. \n",
     "\n",
-    "Regardless, we've shown that **real options data follows somewhat closely the guidelines established by Black-Scholes** and that **a model trained on accurate data for said model will perform better than one trained on market data**."
+    "Regardless, we've shown that **real options data follows somewhat closely the guidelines established by Black-Scholes**, and that in this case, training on real data is better than training on synthetic data."
    ]
   },
   {
