--- a/BS_Model_draft.ipynb
+++ b/BS_Model_draft.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "## Project Overview\n",
     "### Background\n",
-    "**The Black Scholes model** is used to price put and call options by estimating the variation over time said financial instruments. While a Geometric Brownian Motion (GBM) has been used as an assumption of the model, the assumption is often violated in practice, leading to a numerous variations of the Black-Scholes model. \n",
+    "**The Black Scholes model** is used to price put and call options by estimating the variation over time said financial instruments. The model is based on the assumption that the markets are highly efficient (i.e., Efficient Market Hypothesis), which suggests that stock prices are uncorrelated to one another across time. As a result, Geometric Brownian Motion (GBM) also has been assumed. However, the assumption isoften violated in practice, leading to numerous variations of the Black-Scholes model. \n",
     "\n",
     "The **Black-Scholes formula for European call and put options** are:\n",
     "\n",
@@ -2229,7 +2229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
